# Volume-Renderer

./: CMakeLists.txt
Source/: copy.txt  main.cpp  ray.cpp  raycast.cpp  raycast.h  settings.h  utils.h  volume.cpp  volume.h
include/sdl/include/SDL2/: SDL_opengles2_gl2.h
source/: SDLauxiliary.h  boundingbox.cpp  boundingbox.h  main.cpp  math_utils.h  octree.cpp  octree.h  ray.cpp  ray.h  raycast.cpp  raycast.h  settings.h  transfer.txt  transferfunction.h  triangle.cpp  utils.cpp  utils.h  vector_type.h  volume.cpp  volume.h
